--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8"><!-- Set to use all the characters and symbols -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- the compatible browser-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the size of the screens-->
+    <link rel="stylesheet" href="style.css"> 
     <title>Document</title><!-- Title of the document, which it appears  on the browser's tab-->
 </head>
 <body>
-    
+    <h1>Random Emoji</h1>
+    <div class="section">
+        <button class="btn" id="btn">Click</button>
+        <p class="emoji-name" id="emoji-name">Emoji Name</p>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
