--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en"> <!--Set the language of the code--> 
+<html lang="en"> <!--Set the language of the code-->
+
 <head>
     <meta charset="UTF-8"><!-- Set to use all the characters and symbols -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- the compatible browser-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the size of the screens-->
-    <link rel="stylesheet" href="style.css"> 
-    <title>Document</title><!-- Title of the document, which it appears  on the browser's tab-->
+    <link rel="stylesheet" href="style.css">
+    <title>Random Emoji</title><!-- Title of the document, which it appears  on the browser's tab-->
+    
 </head>
+
 <body>
     <h1>Random Emoji</h1>
     <div class="section">
@@ -16,4 +19,5 @@
 
     <script src="index.js"></script>
 </body>
+
 </html>
